crates/ditto-checker/tests/golden/type-errors/unknown_variable_qualified.ditto
module Test exports (..)

-- TODO error should mention that the module isn't imported
bang = NotImported.variable

-- TODO we also want to split out a "module doesn't export that" error at some point too
